--- a/config/config.json
+++ b/config/config.json
@@ -8,8 +8,8 @@
   },
   "test": {
     "username": "root",
-    "password": null,
-    "database": "testdb",
+    "password": "mysql11",
+    "database": "exampledb",
     "host": "localhost",
     "dialect": "mysql",
     "logging": false
